--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "south-african-id-numbers",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -24,7 +24,5 @@
     "tslint": "^6.1.3",
     "typescript": "^5.5.2"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
