--- a/.github/workflows/increment-version.yaml
+++ b/.github/workflows/increment-version.yaml
@@ -11,6 +11,8 @@ jobs:
     if: "!startsWith(github.event.head_commit.message, '[RELEASE]')"
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
       - run: git config --global user.name 'hirebarend'
       - run: git config --global user.email 'hirebarend@gmail.com'
       - run: npm version patch -m "[RELEASE] %s"
